<resources>
    <string name="app_name">Yan</string>
    <string name="action_logout"> Log Out</string>
    <string name="loading">Loading</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="unknown_device">Unknow device</string>
    <string name="title_devices">Yan devices</string>
    <string name="menu_scan">SCAN</string>
    <string name="menu_stop">STOP</string>
    <string name="found_devices">FOUND DEVICES</string>
    <string name="devicename">deviceName</string>
    <string name="deviceaddress">deviceAddress</string>
    <string name="button">Open</string>
    <string name="buttonClose">CLOSE</string>
    <string name="log_out">LOG OUT</string>
    <string name="textview" />
</resources>
